[tool.poetry]
name = "FaceHabitAI"
version = "0.1.0"
description = "AI-powered system to monitor and prevent touching your face."
authors = ["Michał Woś <mw792829570@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10"
mediapipe = "^0.10.20"
simpleaudio = "^1.0.4"
#playsound = "^1.3.0"
#numpy = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"